# Microsoft_AI_for_Tech-Azure_Databricks

./: README.md  pyproject.toml
projetos/desafio_01/: README.md
projetos/desafio_01/notebooks/: Primeiro notebook no DataBricks.ipynb
projetos/desafio_02/: README.md
projetos/desafio_02/src/: main.py
projetos/desafio_03/: README.md
projetos/desafio_03/src/: main.py
projetos/desafio_04/: README.md
projetos/desafio_04/src/: main.py
projetos/desafio_05/: README.md
projetos/desafio_05/src/: main.py
