[tool.poetry]
name = "Bootcamp Microsoft Azure Databricks - 2025"
version = "0.1.0"
description = "Este repositório reúne todos os desafios e projetos desenvolvidos durante o **Bootcamp Microsoft Azure Databricks**, promovido pela [DIO](https://www.dio.me/) em parceria com a **Microsoft**."
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
